--- a/it4women/exercises/intro-bootstrap-form.html
+++ b/it4women/exercises/intro-bootstrap-form.html
@@ -54,7 +54,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<div class="four-samples">
 		<div>
-			<a href="final-bootstrap-form/bootstrap-form.html" target="_blank"><img src="assets/img/intro-bootstrap-form//final-form.png" alt="Sample image"></a>
+			<a href="final-bootstrap-form/bootstrap-form.html" target="_blank"><img src="assets/img/intro-bootstrap-form/final-form.png" alt="Sample image"></a>
 			<a href="final-bootstrap-form/bootstrap-form.html" class="link-exercise"  target="_blank">bootstrap-form.html</a>
 		</div>
 	</div>
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>About HTML forms and GitHub</h2>
 	<p>What are called <i>forms</i> in HTML enable users to submit information to websites for processing. A typical example of a form is shown below.</p>
 
-	<img src="assets/img/intro-bootstrap-form//contact-sample-form.png" alt="Project Contact">
+	<img src="assets/img/intro-bootstrap-form/contact-sample-form.png" alt="Project Contact">
 	
 	<p>It includes three entry areas or <i>form fields</i> into which a user can input information: <b>Your Name</b>, <b>Your Email</b> and <b>Your Message</b>. At the bottom of the form is a <i>submit</i> button named <b>Send</b>. When clicked or tapped, this button submits the information entered in the form fields to the website.</p>
 	
@@ -108,11 +108,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		Save the web page in the <b>bootstrap</b> sub-folder of your <b>websites</b> folder with the name <b>bootstrap-form.html</b>
 		<span class="inside-ol">&nbsp;</span>
 		Ensure the <b>Save as type:</b> dropdown list is set to <b>Webpage, HTML only (*.HTML, *.htm)</b>.
-		<img src="assets/img/intro-bootstrap-form//file-save-as-html.png" alt="Working with Internal Hyperlinks">
+		<img src="assets/img/intro-bootstrap-form/file-save-as-html.png" alt="Working with Internal Hyperlinks">
 		You can close the browser tab containing the <b>bootstrap-form.html</b> web page.
 		<span class="inside-ol">&nbsp;</span>
 		Your <b>websites/bootstrap</b> sub-folder shown now look as shown below.
-		<img src="assets/img/intro-bootstrap-form//file-explorer-html.png" alt="Working with Internal Hyperlinks"></li>
+		<img src="assets/img/intro-bootstrap-form/file-explorer-html.png" alt="Working with Internal Hyperlinks"></li>
 
 		<li><b><a href="final-bootstrap-form/assets/css/bootstrap-form.css" target="_blank">bootstrap-form.css</a></b>: Click this link to open the stylesheet file in a new tab of your web browser.
 		<span class="inside-ol">&nbsp;</span>
@@ -121,11 +121,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		Save the <b>bootstap-form.css</b> stylesheet file to your <b>websites/bootstrap/assets/css</b> sub-folder.
 		<span class="inside-ol">&nbsp;</span>
 		Ensure the <b>Save as type:</b> dropdown list is set to the correct file type.
-		<img src="assets/img/intro-bootstrap-form//file-form-save-as-css.png" alt="Working with Internal Hyperlinks" >
+		<img src="assets/img/intro-bootstrap-form/file-form-save-as-css.png" alt="Working with Internal Hyperlinks" >
 		You can close the browser tab containing the <b>bootstrap-form.css</b> stylesheet.
 		<span class="inside-ol">&nbsp;</span>
 		Your <b>websites/bootstrap/assets/css</b> sub-folder shown now look as shown below.
-		<img src="assets/img/intro-bootstrap-form//file-explorer-fomr-css.png" alt="Working with Internal Hyperlinks"></li>
+		<img src="assets/img/intro-bootstrap-form/file-explorer-fomr-css.png" alt="Working with Internal Hyperlinks"></li>
 	</ul>
 
 	<p>You have now saved the two files you need for this exercise.</p>
@@ -146,7 +146,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<ol>
 		<li>In your web browser, visit the <a href="https://formspree.io" target="_blank">formspree.io</a> website.
-		<img src="assets/img/intro-bootstrap-form//formspree-1.png" alt="fa-icons-copy">
+		<img src="assets/img/intro-bootstrap-form/formspree-1.png" alt="fa-icons-copy">
 		At the top-right of the home page, click the <b>Get Started</b> button.</li>
 		<li>On the &#8216;Register for Formspree&#8217; screen now displayed, enter the Email address you want to use with Formspree.
 		<span class="inside-ol">&nbsp;</span>
@@ -161,6 +161,77 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
+<section id="formspree-forms" class="wrapper-content">
+	<h2>Creating a Project and Form in Formspree</h2>
+
+	<p>In Formspree, a <i>Project</i> is a way of organising different forms &#8211; located on the same or different websites &#8211; together in a single group. So, before you can create a form, you must first create a Project to store that form. Follow these steps:</p>
+	
+	<ol>
+		<li>Sign in to Formspree, and, on the so-called Dashboard screen, click the <b>+ New Project</b> button.</li>
+		
+		<li>You are now shown a pop-up-window in which you can enter the following details:
+		<ul>
+		<li><b>Project name</b>: Enter the name you want to give to your project. This is for your own information only. It will <i>not</i> be displayed on the web page of your website that will contain your HTML form.</li>
+		<li><b>Project type</b>: Accept the default option of &#8216;Dashboard Project&#8217;.
+		<img src="assets/img/intro-bootstrap-form/formspree-project.png" alt="fa-icons-copy"></li>
+		</ul>
+
+		When finished, click the <b>Create Project</b> button.</li>
+		<li>You are returned to the Formspree Dashboard screen. Click the <b>+ New Form</b> button.</li>
+		<li>In the pop-up-window displayed, enter the <b>Form Name</b>.
+		<img src="assets/img/intro-bootstrap-form/formspree-form.png" alt="fa-icons-copy">
+
+		As with the <b>Project Name</b>, the <b>Form Name</b> is for your own information only. It will <i>not</i> be displayed on the web page of your website that will contain your HTML form.
+		<span class="inside-ol">&nbsp;</span>
+		If you have created more than one Project in Formspree, the <b>Project</b> option becomes a drop-down list from which you can select the Project in which you want your new form to be grouped.
+		<span class="inside-ol">&nbsp;</span>
+		
+		When finished, click the <b>Create Form</b> button.</li>
+
+		<li>You are now shown the &#8216;Form Details&#8217; screen. You can see an example below.
+
+		<img src="assets/img/intro-bootstrap-form/formspree-endpoint.png" alt="fa-icons-copy">
+		It displays the so-called <i>endpoint</i> &#8211; the value you will enter in the <b>action</b> attribute of the form you want to create in a web page or pages of your website.</li>
+	</ol>
+
+	<p>You will copy-and-paste this endpoint in the <a href="#edit-form">Updating the HTML of your form</a> section below.</p>
+
+	<p>In Formspree, if you click the <b>Forms</b> option near the top-right of the screen you will be returned to the &#8216;Forms&#8217; screen where you can see your new form listed along with any others you have may have created.</p>
+	<img src="assets/img/intro-bootstrap-form/formspree-forms.png" alt="fa-icons-copy">
+
+	<p>You do <i>not</i> need to create more than one form endpoint for the various forms you will create on your personal portfolio website. <i>You can simply re-use the same endpoint on every form.</i></p>
+
+	<p>In future, when you want to access your endpoint details from to use in your forms:</p>
+
+	<ol>
+		<li>Sign in to your account on Formspree.</li>
+		<li>On the &#8216;Your Forms&#8217 screen, click the name of the form whose endpoint code you want to use.
+		<img src="assets/img/intro-bootstrap-form/formspree-select-form.png" alt="fa-icons-copy"></li>
+		<li>On the &#8216;Forms Details&#8217 screen now displayed, click the <b>Integration</b> tab.
+		<img src="assets/img/intro-bootstrap-form/formspree-integration.png" alt="fa-icons-copy"></li>
+		<li>You can now view the endpoint you need to copy-and-paste into any forms on the web pages of your website.
+		<img src="assets/img/intro-bootstrap-form/formspree-final.png" alt="fa-icons-copy"></li>
+
+	</ol>
+
+</section>
+
+<section id="edit-form" class="wrapper-content bg-white">
+
+	<h2>Updating the endpoint of your form</h2>
+	<p>Your final step is to update your template form with the endpoint code you received from the Formspree website.</p>
+
+	<ol>
+		<li>In VS Code, display the <b>bootstrap-form.html</b> web page.</li>
+		<li>Update the form's <b>action</b> value by copying-and-pasting the endpoint value from Formspree. See the example shown below.
+		<img src="assets/img/intro-bootstrap-form/update-endpoint.png" alt="github-signin"></li>
+		<li>Save your <b>bootstrap-form.html</b> file.</li>
+	</ol>
+</section>
+
+
+
+
 <section id="upload-github" class="wrapper-content bg-white">
 	<h2>Uploading your Bootstrap folder to GitHub</h2>
 
@@ -169,20 +240,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 
 		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
-		<img src="assets/img/intro-bootstrap-form//github-signin.png" alt="github-signin"></li>
+		<img src="assets/img/intro-bootstrap-form/github-signin.png" alt="github-signin"></li>
 
 		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
 		<span class="inside-ol">&nbsp;</span>
 		<b>username.github.io</b>
 
-		<img src="assets/img/intro-bootstrap-form//github-repo-select.png" alt="github-signin"></li>
+		<img src="assets/img/intro-bootstrap-form/github-repo-select.png" alt="github-signin"></li>
 
 		<li>On the next GitHub screen displayed, click the Add file button near the right of the screen and choose <b>Upload files</b> from the dropdown list. 
-		<img src="assets/img/intro-bootstrap-form//github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+		<img src="assets/img/intro-bootstrap-form/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
 
 		<li>In File/Windows Explorer, select your <b>bootstrap</b> folder, and drag-and-drop it to your repository on GitHub. 
 		
-		<img src="assets/img/intro-bootstrap-form//github-upload-drag-drop.png" alt="Introduction to Images"></li>
+		<img src="assets/img/intro-bootstrap-form/github-upload-drag-drop.png" alt="Introduction to Images"></li>
 
 		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
 
@@ -210,10 +281,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<li>Your form is now passed to the Formspree service and you will be presented with an &#8220;I am not a robot&#8221; test. This is to protect your form against spam.
 		
-		<img src="assets/img/intro-bootstrap-form//contact-form-not-robot.png"  alt="Project Setup"></li>
+		<img src="assets/img/intro-bootstrap-form/contact-form-not-robot.png"  alt="Project Setup"></li>
 		
 		<li>After you have proved you are not a robot, you are next shown a screen similar to the following.
-		<img src="assets/img/intro-bootstrap-form//contact-form-activate.png"  alt="Project Setup"><span class="inside-ol">&nbsp;</span>
+		<img src="assets/img/intro-bootstrap-form/contact-form-activate.png"  alt="Project Setup"><span class="inside-ol">&nbsp;</span>
 		
 		This message is only shown the <i>first time</i> a new form is submitted from a particular web address.</li>
 		
@@ -221,16 +292,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<span class="inside-ol">&nbsp;</span>
 		Go to your email account, open the email sent to you by Formspree, and click the <b>Activate Form</b> button.
 
-		<img src="assets/img/intro-bootstrap-form//contact-form-sample-activate-email.png"  alt="Project Setup"></li>
+		<img src="assets/img/intro-bootstrap-form/contact-form-sample-activate-email.png"  alt="Project Setup"></li>
 
 		<li>You will next see a message telling you that your form is now active.
-		<img src="assets/img/intro-bootstrap-form//contact-form-activated.png"  alt="Project Setup"></li>
+		<img src="assets/img/intro-bootstrap-form/contact-form-activated.png"  alt="Project Setup"></li>
 
 		<li>In future, when a user enters their details to the contact form on your website, they will see the following confirmation message after they click/tap the <b>Send</b> button and pass the &#8220;I am not a robot&#8221; test.
 		<span class="inside-ol">&nbsp;</span>
-		<img src="assets/img/intro-bootstrap-form//contact-form-confirmation.png"  alt="Project Setup">
+		<img src="assets/img/intro-bootstrap-form/contact-form-confirmation.png"  alt="Project Setup">
 		Formspree will immediately forward the submitted information to your email account. See the example below.<span class="inside-ol">&nbsp;</span>
-		<img src="assets/img/intro-bootstrap-form//contact-form-to-email.png"  alt="Project Setup"></li>
+		<img src="assets/img/intro-bootstrap-form/contact-form-to-email.png"  alt="Project Setup"></li>
 	
 	</ol>
 
