--- a/it4women/index.html
+++ b/it4women/index.html
@@ -35,6 +35,9 @@
 	font-size: calc(15px + (20 - 15) * ((100vw - 320px)/(1600 - 320));
 	line-height: 1.1;
 }
+
+.bg-section-light { padding-bottom: 32px !important }
+
 </style>
 
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:wght@500&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -83,6 +86,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 </section>
 
+<div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
 <section class="container-wide" style="margin-top:30px">
 
 
@@ -120,6 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div><!--- /flex-grid -->
 
 </section>
+</div>
 
 <section class="container-wide">
 
@@ -158,6 +163,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
+<div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
 <section class="container-wide">
 
 	<h2>Stylesheets, Colours and Images</h2>
@@ -195,7 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div><!--- /flex-grid -->
 
 </section>
-
+</div>
 
 <section class="container-wide">
 
@@ -218,7 +224,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div><!--- /flex-grid -->
 </section>
 
-
+<div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
 <section class="container-wide">
 
 	<h2>The Box Model</h2>
@@ -258,6 +264,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 </section>
+</div>
 
 
 <section class="container-wide">
@@ -269,7 +276,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a href="exercises/intro-media-queries.html">
 				<img src="assets/img/toc-flexbox.png" class="img-shadow" alt="portfolio all the light">
 			</a>
-			<h3><a href="exercises/intro-media-queries.html">Introduction to Media Queries</a></h3>
+			<h3><a href="exercises/intro-media-queries.html">Media Queries</a></h3>
 			<p>Adding media queries to a CSS file so that web page elements can resize according to the width and height of the screen.</p>
 			<a class="btn-solid btn-rounded" href="exercises/intro-media-queries.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
 		</div>
@@ -278,22 +285,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a href="exercises/intro-fluid-type.html">
 				<img src="assets/img/toc-fluid-typography.png" class="img-shadow" alt="portfolio all the light">
 			</a>
-			<h3><a href="exercises/intro-fluid-type.html">Introduction to Fluid Typography</a></h3>
-			<p>Applying the fluid typographic equation to scale font sizes responsively.</p>
+			<h3><a href="exercises/intro-fluid-type.html">Fluid Typography</a></h3>
+			<p>Applying the fluid typographic equation to scale the font sizes of text responsively according to the width of the user's screen.</p>
 			<a class="btn-solid btn-rounded" href="exercises/intro-fluid-type.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
-
-
-		<div class="item-3">&nbsp;
-
-		</div>
-
-
-
+		<div class="item-3">&nbsp;</div>
 	</div><!--- /flex-grid -->
 
 </section>
 
+
+<div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
 <section class="container-wide">
 
 	<h2>Working with Bootstrap</h2>
@@ -305,7 +307,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<img src="assets/img/toc-bs-1.png" class="img-shadow" alt="portfolio all the light">
 			</a>
 			<h3><a href="exercises/intro-bootstrap.html">Introduction to Bootstrap</a></h3>
-			<p>Create a basic Bootstrap web page by linking a standard HTML file to the Bootstrap stylesheet and JavaScript files.</p>
+			<p>Creating a basic Bootstrap web page by linking a standard HTML file to the Bootstrap stylesheet and JavaScript files.</p>
 			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
 		</div>
 
@@ -314,7 +316,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<img src="assets/img/toc-bs-2.png" class="img-shadow" alt="portfolio all the light">
 			</a>
 			<h3><a href="exercises/intro-bootstrap-grid.html">The Bootstrap Grid</a></h3>
-			<p>Create and use responsive one, two, three and four-column layouts based on the Bootstrap grid system.</p>
+			<p>Building and using responsive one, two, three and four-column layouts based on the Bootstrap grid system.</p>
 			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-grid.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
@@ -324,46 +326,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<img src="assets/img/toc-bs-3.png" class="img-shadow" alt="portfolio all the light">
 			</a>
 			<h3><a href="exercises/intro-bootstrap-practical.html">Practical Bootstrap Layouts</a></h3>
-			<p>Adjust the default Bootstrap grid to make it a more practical basis for designing modern-looking web pages.</p>
+			<p>Customising the default Bootstrap grid to make it a more practical basis for designing modern-looking web pages.</p>
 			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-practical.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
 	</div><!--- /flex-grid -->
-	<p>&nbsp;</p>
-	<div class="flex-grid">
-
-		<div class="item-3">
-			<a href="exercises/intro-bootstrap-form.html">
-				<img src="assets/img/toc-bs-form.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/intro-bootstrap-form.html">Bootstrap Contact Form</a></h3>
-			<p>Update a basic email contact form, styled with Bootstrap, to use the online form procesing service from Formspree.</p>
-			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-form.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
-		</div>
-
-		<div class="item-3">
-			<a href="exercises/intro-bootstrap-privacy.html">
-				<img src="assets/img/toc-bs-cookie.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/intro-bootstrap-privacy.html">Bootstrap Privacy Page</a></h3>
-			<p>Download a privacy template web page and create a 'pop-up' cookie consent message to include in your web pages.</p>
-			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-privacy.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
-		</div>
-
-		<div class="item-3">
-			<a href="exercises/intro-bootstrap-menu-footer.html">
-				<img src="assets/img/toc-bs-menu.png" class="img-shadow" alt="portfolio all the light">
-			</a>
-			<h3><a href="exercises/intro-bootstrap-menu-footer.html">Bootstrap Menu and Footer</a></h3>
-			<p>Use and customise Bootstrap-based desktop/laptop and mobile menus, and footer elements.</p>
-			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-menu-footer.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
-		</div>
-
-	</div><!--- /flex-grid -->
-
 
 </section>
-
+</div>
 
 <section class="container-wide">
 
@@ -403,6 +373,69 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	</div><!--- /flex-grid -->
 
+
+</section>
+
+
+<div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
+<section class="container-wide">
+
+	<h2>More Bootstrap</h2>
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap-form.html">
+				<img src="assets/img/toc-bs-form.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap-form.html">Bootstrap Contact Form</a></h3>
+			<p>Updating a basic email contact form, styled with Bootstrap, to use the online form procesing service from Formspree.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-form.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap-privacy.html">
+				<img src="assets/img/toc-bs-cookie.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap-privacy.html">Bootstrap Privacy Page</a></h3>
+			<p>Downloading a privacy template web page and creating a &#8216;pop-up&#8217; cookie consent message to include in your web pages.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-privacy.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap-menu-footer.html">
+				<img src="assets/img/toc-bs-menu.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap-menu-footer.html">Bootstrap Menu and Footer</a></h3>
+			<p>Customising a template for Bootstrap-based desktop/laptop and mobile menus, and footer elements.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-menu-footer.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+	</div><!--- /flex-grid -->
+
+</section>
+</div>
+
+<section class="container-wide">
+
+	<h2>Working with JavaScript</h2>
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<p><a href="js-new/1-first-scripts.html">Writing Your First Scripts</a></p>
+		</div>
+
+		<div class="item-3">
+			<p><a href="js-new/1-first-scripts.html">&nbsp</a></p>
+		</div>
+
+
+		<div class="item-3">
+			<p><a href="js-new/1-first-scripts.html">&nbsp</a></p>
+		</div>
+
+	</div><!--- /flex-grid -->
 
 </section>
 
