--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -207,7 +207,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 		<li>In your web browser, display the following stylesheet.
 		<span class="inside-ol">&nbsp;</span>
-		<a href="bootstrap-custom.css" target="-blank">bootstrap-custom.css</a></li>
+		<a href="final-bootstrap-practical/assets/css/bootstrap-custom.css" target="-blank">bootstrap-custom.css</a></li>
 
 		<li>Right-click on the file, choose <b>Save Page As</b> from the context menu, and save the stylesheet in your <b>bootstrap/assets/css</b> sub-folder.
 		<span class="inside-ol">&nbsp;</span>
