--- a/it4women/projects/final/project-home/contact/index.html
+++ b/it4women/projects/final/project-home/contact/index.html
@@ -60,9 +60,9 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
 
-                <h1>Hello, world!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla exercitationem ipsum enim natus soluta rem eos? In dicta eius, reprehenderit illo odit mollitia nulla ex et odio minus expedita numquam! minus expedita numquam!
-                </p>
+                <h1>Contact Form</h1>
+                <p>Have a project you'd like to discuss? Take the next step!</p>
+                <p>Use the form below to let me know a little more about your project and I'll get back to you.</p>
                 
                 <!-- Begin form -->
                 <form action="#" class="needs-validation" novalidate id="myform">
@@ -92,8 +92,6 @@
                   </form> 
                   <!-- End form -->
 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla exercitationem ipsum enim natus soluta rem eos? In dicta eius, reprehenderit illo odit mollitia nulla ex et odio minus expedita numquam! minus expedita numquam!
-                </p>
             </div>
         </div>
     </div>
