--- a/it4women/index.html
+++ b/it4women/index.html
@@ -543,6 +543,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div><!-- End parent flexbox container -->
 </section>
 
+<p>&nbsp;</p>
+
+<section class="block-content bg-white" style="background: #ffe7d9">
+	<h2>Building your Personal Portfolio Website</h2>
+	<p>In this project you will create your Bootstrap-powered, six-page personal website.</p>
+
+	<p><a href="projects/project-home/index.html"><b>Your Personal Portfolio Website</a></b></p>
+
+</section>
+
+
+
 <section class="block-content bg-white">
 
 <h2>Slideshows</h2>
