--- a/it4women/index.html
+++ b/it4women/index.html
@@ -42,16 +42,6 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:wght@500&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-
-
-	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-N54G36T');</script>
-	<!-- End Google Tag Manager -->
-
 </head>
 
 <body>
@@ -549,7 +539,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Building your Personal Portfolio Website</h2>
 	<p>In this project you will create your Bootstrap-powered, six-page personal website.</p>
 
-	<p><a href="projects/project-home/index.html"><b>Your Personal Portfolio Website</a></b></p>
+	<p><a href="projects/project-home/index99.html"><b>Your Personal Portfolio Website</a></b></p>
 
 </section>
 
@@ -603,5 +593,12 @@ setTimeout(ldinsp, 0);
 <!-- End Inspectlet Asynchronous Code -->
 </body>
 </html>
+
+
+
+
+THIS WORKS
+file:///C:/Users/Jeova/Downloads/websites/portifolio/index.html
+
 
 
