--- a/it4women/projects/project-home/index99.html
+++ b/it4women/projects/project-home/index99.html
@@ -67,25 +67,27 @@
 <section id="introduction" class="wrapper-content bg-white">
 	<h2>Introduction</h2>
 
-	<p>In this project you will create your personal website, based on sample website templates. Yout website will have the following web pages:</p>
+	<p>In this project you will create your personal website, based on sample website templates. Yout website will have the following six web pages:</p>
 	<ul>
 		<li><b>Home page</b> and <b>Privacy page</b> (in main folder)</li>
 		<li><b>Portfolio page</b> (in <b>/portfolio</b> sub-folder)</li>
 		<li><b>Contact page</b> (in <b>/contact</b> sub-folder)</li>
-		<li><b>Wordpress page</b> (in <b>/wordpress</b> sub-folder)</li>
+		<li><b>WordPress page</b> (in <b>/wordpress</b> sub-folder)</li>
 		<li><b>JavaScript page</b> (in <b>/javascript</b> sub-folder)</li>
 	</ul>
-	<p>The apperance of allweb pages will be control;ed by the <b>global-.css</b> stylesheet.</p>
+	<p>A single stylesheet named <b>global.css</b> will control the appearance of all the above web pages.</p>
 
-	<p>You can display a sample finished version of the websitee by clicking the link below.</p>
+	<p>You can display a sample finished version of the website by clicking the link below.</p>
 
-	<p><b><a href="../final/project-home/index.html" target="_blank">index.html</a></b></p>
+	<p><b><a href="../final/project-home/index.html" target="_blank">Sample Portfolio Website</a></b></p>
 </section> 
 
 
 <section id="sample-websites" class="wrapper-content bg-white">
 
 <h2>Sample personal websites</h2>
+<p>For your inspiration here is a selection of sample portfolio websites from web designers and developers around the world.</p>
+
 	<div class="container-flexbox sample-pages">
 		<div class="item-3">
 			<a target="_blank" href="https://inakisoria.com/">https://inakisoria.com/</a>
