--- a/it4women/projects/project-home/index99.html
+++ b/it4women/projects/project-home/index99.html
@@ -153,7 +153,7 @@
 	<p>Your first step is to create the sub-folders that will store the your web pages and other resources used by those various pages of your personal portfolio website.</p>
 	<ol>
 
-		<li>Inside your 'main' <b>websites</b> folder, create the following sub-folders, if they do not alrady exist:
+		<li>Inside your 'main' <b>websites</b> folder, create the following sub-folders (if they do not already exist):
 		<span class="inside-ol">&nbsp;</span>
 		websites/<b>assets</b><br>
 		websites/<b>contact</b><br>
@@ -161,7 +161,7 @@
 		websites/<b>portfolio</b><br>
 		websites/<b>wordpress</b></li>
 
-		<li>Next, inside your <b>websites/assets</b> sub-folder, create the following sub-folders:
+		<li>Next, inside your <b>websites/assets</b> sub-folder, create the following sub-folders (if they do not already exist):
 		<span class="inside-ol">&nbsp;</span>
 		websites/<b>assets</b><br>
 		websites/<b>assets/css</b><br>
