--- a/it4women/exercises/intro-bootstrap-form.html
+++ b/it4women/exercises/intro-bootstrap-form.html
@@ -49,15 +49,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Update a basic email contact form, styled with Bootstrap, to use the online form procesing service from Formspree.</li>
 	</ul>
 
+	<p>You can view the sample web page you will update in this Tutorial by clicking the image or text link below. The finished sample will open in a new tab of your web browser.</p>
 
-	<p>You can view the sample web page you will update in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
+	<a href="final-bootstrap-form/bootstrap-form.html" target="_blank"><img src="assets/img/intro-bootstrap-form/final-form.png" style="max-width: 600px" alt="sample image"></a>
 
-	<div class="four-samples">
-		<div>
-			<a href="final-bootstrap-form/bootstrap-form.html" target="_blank"><img src="assets/img/intro-bootstrap-form/final-form.png" alt="Sample image"></a>
-			<a href="final-bootstrap-form/bootstrap-form.html" class="link-exercise"  target="_blank">bootstrap-form.html</a>
-		</div>
-	</div>
+
+	<p><b><a href="final-bootstrap-form/bootstrap-form.html" target="_blank">Sample Bootstrap Form</a></b></p>
 
 </section>
 
