--- a/it4women/exercises/intro-bootstrap-privacy.html
+++ b/it4women/exercises/intro-bootstrap-privacy.html
@@ -51,14 +51,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Add the JavaScript code from Insites to your sample privacy web page.</li>
 	</ul>
 
-	<p>You can view the template privacy web page you will work in this Tutorial by clicking the link below.</p>
+	<p>You can view the sample web page you will work with in this Tutorial by clicking the image or text link below. The finished sample will open in a new tab of your web browser.</p>
 
-	<div class="four-samples">
-		<div>
-			<a href="final-bootstrap-privacy/after/bootstrap-privacy-template.html" target="_blank"><img src="assets/img/intro-bootstrap-privacy/final-privacy.png" alt="Sample image"></a>
-			<a href="final-bootstrap-privacy/after/bootstrap-privacy-template.html" class="link-exercise"  target="_blank">bootstrap-privacy-template.html</a>
-		</div>
-	</div>
+	<a href="final-bootstrap-privacy/after/bootstrap-privacy-template.html" target="_blank"><img src="assets/img/intro-bootstrap-privacy/final-privacy.png" style="max-width: 600px" alt="sample image"></a>
+
+	<p><b><a href="final-bootstrap-privacy/after/bootstrap-privacy-template.html" target="_blank">Sample Bootstrap Privacy Page</a></b></p>
 
 	<p>This sample privacy web page is suitable for including on websites that use <a href="setting-up-google-analytics.html">Google Analytics</a>.</p>
 
