--- a/it4women/exercises/intro-bootstrap-menu-footer.html
+++ b/it4women/exercises/intro-bootstrap-menu-footer.html
@@ -82,14 +82,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Update a standard web page footer element with your own contact details and social media links.</li>
 	</ul>
 
-	<p>You can view a finished version of the Bootstrap menu and footer web page you will work in this Tutorial by clicking the link below. The finished web page will open in a new tab of your web browser.</p>
+	<p>You can view a finished version of the Bootstrap menu and footer web page you will work in this Tutorial by clicking the image or text link below. The finished web page will open in a new tab of your web browser.</p>
 
-	<a href="final-bootstrap-menu-footer/after/bootstrap-menu-footer.html" target="_blank"><img src="assets/img/intro-bootstrap-menus/final-menu-footer.png" alt="Sample image" style="max-width: 500px"></a>
+	<a href="final-bootstrap-menu-footer/after/bootstrap-menu-footer.html" target="_blank"><img src="assets/img/intro-bootstrap-menus/final-menu-footer.png" alt="Sample image" style="max-width: 600px"></a>
 	<a href="final-bootstrap-menu-footer/after/bootstrap-menu-footer.html" class="link-exercise" target="_blank">bootstrap-menu-footer.html</a>
 
-
-
 </section>
+
 
 <section class="wrapper-content">
 	<div class="box-toc">
