--- a/it4women/exercises/intro-bootstrap-form.html
+++ b/it4women/exercises/intro-bootstrap-form.html
@@ -53,7 +53,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<a href="final-bootstrap-form/bootstrap-form.html" target="_blank"><img src="assets/img/intro-bootstrap-form/final-form.png" style="max-width: 600px" alt="sample image"></a>
 
-	<p><b><a href="final-bootstrap-form/bootstrap-form.html" target="_blank">Sample Bootstrap Form</a></b></p>
+	<b><a href="final-bootstrap-form/bootstrap-form.html" class="link-exercise" target="_blank">bootstrap-form.html</a></b>
+
 
 </section>
 
