--- a/it4women/exercises/intro-bootstrap-privacy.html
+++ b/it4women/exercises/intro-bootstrap-privacy.html
@@ -55,9 +55,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<a href="final-bootstrap-privacy/after/bootstrap-privacy-template.html" target="_blank"><img src="assets/img/intro-bootstrap-privacy/final-privacy.png" style="max-width: 600px" alt="sample image"></a>
 
-	<p><b><a href="final-bootstrap-privacy/after/bootstrap-privacy-template.html" target="_blank">Sample Bootstrap Privacy Page</a></b></p>
+	<b><a href="final-bootstrap-privacy/after/bootstrap-privacy-template.html"  class="link-exercise"  target="_blank">bootstrap-privacy-template.html</a></b>
 
-	<p>This sample privacy web page is suitable for including on websites that use <a href="setting-up-google-analytics.html">Google Analytics</a>.</p>
+	<p><br>This sample privacy web page is suitable for including on websites that use <a href="setting-up-google-analytics.html">Google Analytics</a>.</p>
 
 </section>
 
