--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -85,6 +85,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Update the background colours of Bootstrap grid elements, and add images to grid rows and columns.</li>
 	</ul>
 
+	<p>You can view a finished version of the Bootstrap grid layout web page you will create in this Tutorial by clicking the link below. The finished web page will open in a new tab of your web browser.</p>
+
+	<a href="final-bootstrap-practical/bootstrap-practical-layouts-4.html" target="_blank"><img src="assets/img/intro-bootstrap-grid/flex-cols-after-2.png" alt="Sample image" style="max-width: 600px"></a>
+	<a href="final-bootstrap-practical/bootstrap-practical-layouts-4.html" class="link-exercise" target="_blank">bootstrap-practical-layouts.html</a>
+
 </section>
 
 <section class="wrapper-content">
@@ -99,6 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p><a href="#col-colours">Adding background colours to grid columns</a></p>
 		<p><a href="#row-colours">Adding background colours to grid rows</a></p>
 		<p><a href="#add-images">Adding images to grid rows and columns</a></p>
+		<p><a href="#colour-guides-remove">Removing the red-coloured borders</a></p>
 		<p><a href="#upload-github">Uploading your Bootstrap folder to GitHub</a></p>
 		<p><a href="#further-resources">Further resources</a></p>
 	</div>
@@ -361,6 +367,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p><a href="final-bootstrap-practical/bootstrap-practical-layouts-3.html" target="_blank">Bootstrap page with images</a>.</p>
 
 </section>
+
+
+<section id="colour-guides-remove" class="wrapper-content bg-white">
+
+	<h2>Removing the red-coloured borders</h2>
+	<p>As a final step, remove the style from the <span class="syn">head</span> of the web page that adds the red-coloured borders to  <span class="syn">container</span> elements.</p>
+	<img src="assets/img/intro-bootstrap-practical/red-border-3.png" alt="github-signin">
+
+	<p>You can see an example of the finished web page below.</p>
+	
+	<p><a href="final-bootstrap-practical/bootstrap-practical-layouts-4.html" target="_blank">Bootstrap page without red borders</a>.</p>
+
+</section>
+
+
 
 
 <section id="upload-github" class="wrapper-content bg-white">
