--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>You can view a finished version of the Bootstrap grid layout web page you will create in this Tutorial by clicking the link below. The finished web page will open in a new tab of your web browser.</p>
 
-	<a href="final-bootstrap-practical/bootstrap-practical-layouts-4.html" target="_blank"><img src="assets/img/intro-bootstrap-grid/flex-cols-after-2.png" alt="Sample image" style="max-width: 600px"></a>
+	<a href="final-bootstrap-practical/bootstrap-practical-layouts-4.html" target="_blank"><img src="assets/img/intro-bootstrap-practical/final-practical.png" alt="Sample image" style="max-width: 600px"></a>
 	<a href="final-bootstrap-practical/bootstrap-practical-layouts-4.html" class="link-exercise" target="_blank">bootstrap-practical-layouts.html</a>
 
 </section>
@@ -125,7 +125,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>Because electronic screens - and modern printing processes - can create almost any background colour, the original term of white space is increasingly known by the alternative term of <i>negative space</i>.</p>
 
-	<p>In this Tutorial you will use a new stylesheet named <b>.css</b> that adjusts the Bootstrap grid so that it is more suited to creating web page layouts with whitespacing.</p>
+	<p>In this Tutorial you will use a new stylesheet named <b>bootstrap-custom.css</b> that adjusts the Bootstrap grid so that it is more suited to creating web page layouts with whitespacing.</p>
 	<p></p>
 </section>
 
