--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -104,7 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p><a href="#col-colours">Adding background colours to grid columns</a></p>
 		<p><a href="#row-colours">Adding background colours to grid rows</a></p>
 		<p><a href="#add-images">Adding images to grid rows and columns</a></p>
-		<p><a href="#colour-guides-remove">Removing the red-coloured borders</a></p>
+		<p><a href="#colour-guides-remove">Removing the red-coloured border guides</a></p>
 		<p><a href="#upload-github">Uploading your Bootstrap folder to GitHub</a></p>
 		<p><a href="#further-resources">Further resources</a></p>
 	</div>
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section id="colour-guides-remove" class="wrapper-content bg-white">
 
-	<h2>Removing the red-coloured borders</h2>
+	<h2>Removing the red-coloured border guides</h2>
 	<p>As a final step, remove the style from the <span class="syn">head</span> of the web page that adds the red-coloured borders to  <span class="syn">container</span> elements.</p>
 	<img src="assets/img/intro-bootstrap-practical/red-border-3.png" alt="github-signin">
 
