--- a/it4women/exercises/hero-blocks-one.html
+++ b/it4women/exercises/hero-blocks-one.html
@@ -80,13 +80,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>You can view a finished version of the sample web page you will work with in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
 
+	<a href="final-hero/hero-basic/after/hero-basic.html" target="_blank"><img src="assets/img/hero-blocks/final-basic.png" alt="Sample image" style="max-width:600px"></a>
 
-	<div class="four-samples">
-		<div>
-			<a href="final-hero/hero-basic/after/hero-basic.html" target="_blank"><img src="assets/img/hero-blocks/example-one-browser.jpg" alt="Sample image"></a>
-			<a href="final-hero/hero-basic/after/hero-basic.html" class="link-exercise"  target="_blank">hero-basic.html</a>
-		</div>
-	</div>
+	<a href="final-hero/hero-basic/after/hero-basic.html" class="link-exercise"  target="_blank">hero-basic.html</a>
 
 </section>
 
